arrow fix, now does not display on mobile to prevent overlays

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5,7 +5,7 @@
 /*
 
     0.  Includes
-    1.  Icons
+    1.  Iconss
     2.  General
     3.  Utilities
     4.  General
@@ -199,24 +199,6 @@ a.btn {
 
 a.btn:hover {
     background: #86c440;
-}
-
-#header-arrow {
-    font-size: 140px;
-    margin: -10px auto;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: -120px;
-    cursor: pointer;
-    opacity: 0.6;
-    transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
-}
-#header-arrow:hover {
-    opacity: 0.9;
 }
 
 h1 a, h2 a, h3 a,
@@ -668,7 +650,7 @@ a.fn-item.active {
 }
 
 /* Create a bouncing scroll-down arrow on homepage with cover image */
-.scroll-down {
+#header-arrow {
     display: block;
     position: absolute;
     z-index: 100;
@@ -688,7 +670,7 @@ a.fn-item.active {
 }
 
 /* Stop it bouncing and increase contrast when hovered */
-.scroll-down:hover {
+#header-arrow:hover {
     color: #fff;
     -webkit-animation: none;
     animation: none;
